@@ -542,6 +542,7 @@ sub xst_network_get_interfaces_parse_table
            [ broadcast,          \&xst_parse_sh,      IFCFG, BROADCAST ],
            [ network,            \&xst_parse_sh,      IFCFG, NETWORK ],
            [ gateway,            \&xst_parse_sh,      IFCFG, GATEWAY ],
+           [ peerdns,            \&xst_parse_sh_bool, IFCFG, PEERDNS ],
            [ dns1,               \&xst_parse_sh,      IFCFG, DNS1 ],
            [ dns2,               \&xst_parse_sh,      IFCFG, DNS2 ],
            [ bootproto,          \&xst_network_rh62_parse_bootproto, IFCFG, BOOTPROTO ],
@@ -665,6 +666,7 @@ sub xst_network_get_interface_replace_table
         [ broadcast,          \&xst_replace_sh,      IFCFG, BROADCAST ],
         [ network,            \&xst_replace_sh,      IFCFG, NETWORK ],
         [ gateway,            \&xst_replace_sh,      IFCFG, GATEWAY ],
+        [ peerdns,            \&xst_replace_sh_bool, IFCFG, PEERDNS ],
         [ dns1,               \&xst_replace_sh,      IFCFG, DNS1 ],
         [ dns2,               \&xst_replace_sh,      IFCFG, DNS2 ],
         [ bootproto,          \&xst_network_rh62_replace_bootproto, IFCFG, BOOTPROTO ],
