@@ -145,17 +145,17 @@ sub xst_util_struct_eq
 
     for ($i = 0; $i <= $#$a1; $i++)
     {
-      return 0 if !&xst_util_struct_cmp ($$a1[$i], $$a2[$i]);
+      return 0 if !&xst_util_struct_eq ($$a1[$i], $$a2[$i]);
     }
   }
   elsif ($type1 eq "HASH") {
     @keys1 = sort keys (%$a1);
     @keys2 = sort keys (%$a2);
 
-    return 0 if !&xst_util_struct_cmp (\@keys1, \@keys2);
+    return 0 if !&xst_util_struct_eq (\@keys1, \@keys2);
     foreach $i (@keys1)
     {
-      return 0 if !&xst_util_struct_cmp ($$a1{$i}, $$a2{$i});
+      return 0 if !&xst_util_struct_eq ($$a1{$i}, $$a2{$i});
     }
   }
   else
